--- a/events.html
+++ b/events.html
@@ -8,21 +8,21 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="css/tailwind.min.css" />
-  <link href="css/animate/animate.min.css" rel="stylesheet">
+  <link href="css/animate.min.css" rel="stylesheet">
   <title>TinkerHub Farook College</title>
 </head>
 
 <body>
-  <header class="text-gray-600 body-font border-b-2 border-collapse wow fadeInDown">
+  <header class="text-gray-600 body-font border-b-2 border-collapse">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <img src="img/logo.png" alt="TFC Logo" class="w-40 text-white p-2">
+        <img src="img/logo.png" alt="TFC Logo" class="w-40 text-white p-2 wow flipInX">
       </a>
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900  wow flipInX" data-wow-delay="0.5s" href="index.html">Home</a>
-        <a class="mr-5 hover:text-gray-900  wow flipInX bg-yellow-300 px-5 py-2 rounded-2xl text-black" data-wow-delay="0.5s">Events</a>
-        <a class="mr-5 hover:text-gray-900  wow flipInX" data-wow-delay="0.5s" href="index.html#about">About Us</a>
-        <a class="mr-5 hover:text-gray-900  wow flipInX" data-wow-delay="0.5s" href="index.html#contact">Contact Us</a>
+        <a class="mr-5 hover:text-gray-900 wow flipInX" href="index.html">Home</a>
+        <a class="mr-5 hover:text-gray-900 wow flipInX bg-yellow-300 px-5 py-2 rounded-2xl text-black" data-wow-delay="0.25s">Events</a>
+        <a class="mr-5 hover:text-gray-900 wow flipInX" href="index.html#about">About Us</a>
+        <a class="mr-5 hover:text-gray-900 wow flipInX" href="index.html#contact">Contact Us</a>
       </nav>
       <!-- <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Button
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
@@ -216,7 +216,7 @@
     </div>
   </footer>
   <script src="js/main.js"></script>
-  <script src="css/wow/wow.min.js"></script>
+  <script src="js/wow.min.js"></script>
   <script>
     new WOW().init();
   </script>
