Added members image

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               Here we hold hands with Tinkerhub Foundation and take pride in learning and growing together with them.In
               this journey Tinkerhub Farook college focuses on enabling a peer to peer learning culture in the campus
               and promote a sense of community and belonging among the students</p>
-            <a class="text-yellow-500 inline-flex items-center" href="https://tinkerhub.org/">Learn More
+            <a class="text-yellow-500 inline-flex items-center" href="https://tinkerhub.org/" target="_blank">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -640,7 +640,7 @@
             <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Unnikrishnan.jpg">
             <div class="w-full">
               <h2 class="title-font font-medium text-lg text-gray-900">Unnikrishnan</h2>
-              <h3 class="text-gray-500 mb-3">UI Developer</h3>
+              <h3 class="text-gray-500 mb-3">Campus Co-Lead</h3>
               <span class="inline-flex">
                 <a class="text-gray-500">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -691,8 +691,8 @@
           <div class="h-full flex flex-col items-center text-center">
             <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Fiza.jpg">
             <div class="w-full">
-              <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
-              <h3 class="text-gray-500 mb-3">UI Developer</h3>
+              <h2 class="title-font font-medium text-lg text-gray-900">Fiza P</h2>
+              <h3 class="text-gray-500 mb-3">Tech Lead</h3>
               <span class="inline-flex">
                 <a class="text-gray-500">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -717,8 +717,8 @@
           <div class="h-full flex flex-col items-center text-center">
             <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Adil.jpg">
             <div class="w-full">
-              <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
-              <h3 class="text-gray-500 mb-3">UI Developer</h3>
+              <h2 class="title-font font-medium text-lg text-gray-900">Adil Ayyoob</h2>
+              <h3 class="text-gray-500 mb-3">Creative Lead</h3>
               <span class="inline-flex">
                 <a class="text-gray-500">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -741,10 +741,10 @@
         </div>
         <div class="p-4 md:w-1/2 wow fadeInRight" data-wow-delay="0.1s">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="https://dummyimage.com/203x203">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Kavya.jpeg">
             <div class="w-full">
-              <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
-              <h3 class="text-gray-500 mb-3">UI Developer</h3>
+              <h2 class="title-font font-medium text-lg text-gray-900">Kavya P</h2>
+              <h3 class="text-gray-500 mb-3">Outreach Team</h3>
               <span class="inline-flex">
                 <a class="text-gray-500">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -767,10 +767,10 @@
         </div>
         <div class="p-4 md:w-1/2 wow fadeInLeft" data-wow-delay="0.1s">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="https://dummyimage.com/203x203">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Faiz.jpg">
             <div class="w-full">
-              <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
-              <h3 class="text-gray-500 mb-3">UI Developer</h3>
+              <h2 class="title-font font-medium text-lg text-gray-900">Faiz Arif</h2>
+              <h3 class="text-gray-500 mb-3">Tech Team</h3>
               <span class="inline-flex">
                 <a class="text-gray-500">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -793,10 +793,10 @@
         </div>
         <div class="p-4 md:w-1/2 wow fadeInRight" data-wow-delay="0.1s">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="https://dummyimage.com/203x203">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Anjana.jpeg">
             <div class="w-full">
-              <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
-              <h3 class="text-gray-500 mb-3">UI Developer</h3>
+              <h2 class="title-font font-medium text-lg text-gray-900">Anjana C</h2>
+              <h3 class="text-gray-500 mb-3">Outreach Team</h3>
               <span class="inline-flex">
                 <a class="text-gray-500">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -819,10 +819,10 @@
         </div>
         <div class="p-4 md:w-1/2 wow fadeInLeft" data-wow-delay="0.1s">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="https://dummyimage.com/203x203">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Amjad.jpeg">
             <div class="w-full">
-              <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
-              <h3 class="text-gray-500 mb-3">UI Developer</h3>
+              <h2 class="title-font font-medium text-lg text-gray-900">Amjad</h2>
+              <h3 class="text-gray-500 mb-3">Tech Team</h3>
               <span class="inline-flex">
                 <a class="text-gray-500">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -845,10 +845,10 @@
         </div>
         <div class="p-4 md:w-1/2 wow fadeInRight" data-wow-delay="0.1s">
           <div class="h-full flex flex-col items-center text-center">
-            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="https://dummyimage.com/203x203">
+            <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Nidha.jpg">
             <div class="w-full">
-              <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
-              <h3 class="text-gray-500 mb-3">UI Developer</h3>
+              <h2 class="title-font font-medium text-lg text-gray-900">Nidha Shoukath</h2>
+              <h3 class="text-gray-500 mb-3">Tech Team</h3>
               <span class="inline-flex">
                 <a class="text-gray-500">
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
