--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             that connect, inspire and engage students to upskill their talents.</p>
           <div class="flex justify-center">
             <a class="inline-flex text-black bg-yellow-300 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-400 rounded text-lg"
-            href="https://forms.gle/boTTnkrd4LKUDQBfA" target="blank">Join</a>
+            href="https://airtable.com/shr3R2T0R8fBlKyv6" target="blank">Join</a>
             <a class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"
             href="https://tinkerhub.org/" target="blank">Know More</a>
           </div>
