--- a/events.html
+++ b/events.html
@@ -137,7 +137,7 @@
         <div class="flex justify-center -m-4 wow fadeInUp" id="upcoming-events">
           <div
             class="max-w-2xl mt-10 mx-auto overflow-hidden bg-white rounded-lg shadow-md hover:shadow-lg dark:bg-gray-800">
-            <img class="object-cover w-full h-64" src="events/hero.png" alt="Article">
+            <img class="object-cover w-full h-64" src="events/hero.jpg" alt="Article">
             <div class="p-6">
               <div>
                 <span class="text-xs font-medium text-yellow-600 uppercase dark:text-blue-400">Latest Event</span>
