--- a/events.html
+++ b/events.html
@@ -144,11 +144,9 @@
                 <a href="#"
                   class="block mt-2 text-2xl font-semibold text-gray-800 dark:text-white hover:text-gray-600 hover:underline">The
                   Essentials</a>
-                <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">The Essentials is a series of events well-curated
-                  for those who want to start their journey in tech. The events will be a perfect blend of learning and
-                  hands-on with constant mentor support helping everyone explore and grow simultaneously.</p>
+                <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">30 Days of Joy is a learning event driven through Joy of Programming. Joy of Programming is an interactive programming course designed for absolute beginners that doesn't expect you to learn coding the "traditional" way or have any prior knowledge. This course basically enables you to think logically, approach problems, figure out and develop your analytical skills through a fun and interactive learning platform.</p>
                 <a class="text-yellow-500 inline-flex items-center mt-2 md:mb-2 lg:mb-0"
-                  href="https://bit.ly/thfcEssentials">Register Now
+                  href="https://bit.ly/30daysOfJoy">Register Now
                   <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                     stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
