--- a/events.html
+++ b/events.html
@@ -142,8 +142,7 @@
               <div>
                 <span class="text-xs font-medium text-yellow-600 uppercase dark:text-blue-400">Latest Event</span>
                 <a href="#"
-                  class="block mt-2 text-2xl font-semibold text-gray-800 dark:text-white hover:text-gray-600 hover:underline">The
-                  Essentials</a>
+                  class="block mt-2 text-2xl font-semibold text-gray-800 dark:text-white hover:text-gray-600 hover:underline">30 Days of Joy</a>
                 <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">30 Days of Joy is a learning event driven through Joy of Programming. Joy of Programming is an interactive programming course designed for absolute beginners that doesn't expect you to learn coding the "traditional" way or have any prior knowledge. This course basically enables you to think logically, approach problems, figure out and develop your analytical skills through a fun and interactive learning platform.</p>
                 <a class="text-yellow-500 inline-flex items-center mt-2 md:mb-2 lg:mb-0"
                   href="https://bit.ly/30daysOfJoy">Register Now
