rasiya miss image aded

--- a/events.html
+++ b/events.html
@@ -248,9 +248,9 @@
           TinkerHub FC — Made with <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline text-red-400" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd" />
           </svg> by 
-          <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
-          <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
-          <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@adilayyoob</a>
+          <a href="https://www.linkedin.com/in/rijfas-usman-ba7141214/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
+          <a href="https://www.linkedin.com/in/unnikrishnan-n-p/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
+          <a href="https://www.linkedin.com/in/adil-ayyoob/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@adilayyoob</a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
           <a class="text-gray-500" href="https://www.youtube.com/channel/UCfHpoBCfct0z0GU2azdfD7Q" target="_blank">
