--- a/index.html
+++ b/index.html
@@ -587,6 +587,32 @@
               </div>
             </div>
           </div>
+          <div class="p-4 md:w-1/2 wow fadeInLeft" data-wow-delay="0.1s">
+            <div class="h-full flex flex-col items-center text-center">
+              <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Rasiya_miss.jpg">
+              <div class="w-full">
+                <h2 class="title-font font-medium text-lg text-gray-900">Rasiya Anwar</h2>
+                <h3 class="text-gray-500 mb-3">Staff Advisor</h3>
+                <span class="inline-flex">
+                  <a class="text-gray-500">
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                      <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                    </svg>
+                  </a>
+                  <a class="ml-2 text-gray-500">
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                      <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+                    </svg>
+                  </a>
+                  <a class="ml-2 text-gray-500">
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                      <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+                    </svg>
+                  </a>
+                </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -648,9 +674,9 @@
           TinkerHub FC — Made with <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline text-red-400" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd" />
           </svg> by
-          <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
-          <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
-          <a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@adilayyoob</a>
+          <a href="https://www.linkedin.com/in/rijfas-usman-ba7141214/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
+          <a href="https://www.linkedin.com/in/unnikrishnan-n-p/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
+          <a href="https://www.linkedin.com/in/adil-ayyoob/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@adilayyoob</a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
           <a class="text-gray-500" href="https://www.youtube.com/channel/UCfHpoBCfct0z0GU2azdfD7Q" target="_blank">
