new team images added

--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
             future.</p>
         </div>
         <div class="flex flex-wrap -m-4 justify-around">
-          <div class="p-4 md:w-1/2 wow fadeInLeft" data-wow-delay="0.1s">
-            <div class="h-full flex flex-col items-center text-center">
-              <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Rijfas.jpg">
+          <div class="p-4 w-full md:w-1/2 flex justify-center wow fadeInLeft" data-wow-delay="0.1s">
+            <img class="rounded-xl" src="img/execom/Execom1.png">
+              <!-- <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Rijfas.jpg">
               <div class="w-full">
                 <h2 class="title-font font-medium text-lg text-gray-900">Rijfas</h2>
                 <h3 class="text-gray-500 mb-3">Campus Lead</h3>
@@ -350,10 +350,14 @@
                     </svg>
                   </a>
                 </span>
-              </div>
-            </div>
+              </div> -->
+            <!-- </div> -->
           </div>
-          <div class="p-4 md:w-1/2 wow fadeInRight" data-wow-delay="0.1s">
+          <div class="p-4 w-full md:w-1/2 flex justify-center wow fadeInRight" data-wow-delay="0.1s">
+            <img class="rounded-xl" src="img/execom/Execom2.png">
+
+          </div>
+          <!-- <div class="p-4 md:w-1/2 wow fadeInRight" data-wow-delay="0.1s">
             <div class="h-full flex flex-col items-center text-center">
               <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Unnikrishnan.jpg">
               <div class="w-full">
@@ -586,8 +590,8 @@
                 </span>
               </div>
             </div>
-          </div>
-          <div class="p-4 md:w-1/2 wow fadeInLeft" data-wow-delay="0.1s">
+          </div> -->
+          <div class="p-4 w-full wow fadeInLeft" data-wow-delay="0.1s">
             <div class="h-full flex flex-col items-center text-center">
               <img alt="team" class="flex-shrink-0 rounded-lg w-64 h-64 object-cover object-center mb-4" src="img/execom/Rasiya_miss.jpg">
               <div class="w-full">
