--- a/events.html
+++ b/events.html
@@ -251,6 +251,7 @@
           <a href="https://www.linkedin.com/in/rijfas-usman-ba7141214/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@rijfas</a>
           <a href="https://www.linkedin.com/in/unnikrishnan-n-p/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@unnikrishnan</a>
           <a href="https://www.linkedin.com/in/adil-ayyoob/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@adilayyoob</a>
+          <a href="https://www.linkedin.com/in/nidha-shoukhath-kp-36004b215/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@nidhashoukhath</a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
           <a class="text-gray-500" href="https://www.youtube.com/channel/UCfHpoBCfct0z0GU2azdfD7Q" target="_blank">
