ongoing events removed

--- a/events.html
+++ b/events.html
@@ -126,7 +126,7 @@
             </div>
         </div> -->
   
-    <section class="text-gray-600 body-font">
+<!--     <section class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap w-full mb-20 wow fadeInLeft">
           <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
@@ -157,7 +157,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
   
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto">
